# AMLPDS-

./: Dockerfile  README.md  dockerfile  license  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml
Data/: Samplephishing.json  test_emails.txt
Scripts/: init_db.py
Src/: __init__.py  cli.py
Src/explainability/: __init__.py  ai_assistant.py
Src/models/: __init__.py  adversarial_trainer.py  bert_classifer.py
Src/preprocessing/: __init__.py  email_preprocessor.py
Src/utils/: config.py  logger.py
Src/web/: __init__.py  api.py  app.py  auth.py
config/: Security.yaml  config.yaml  logging.yaml
docs/: API.md
scripts/: download_data.py  evaluate_model.py  preprocess_data.py  train_model.py
static/css/: styles.css
static/js/: main.js
templates/: 404.html  429.html  500.html  about.html  analyze.html  base.html  dashboard.html  index.html  login.html  register.html
test/: test_api.py  test_model.py  test_preprocessing.py  test_security.py
